# aegis-backend

./: .env  Cargo.toml  Dockerfile  docker-compose.yml
localstack/state/dynamodb/: shared-local-instance.db
migrations/: 005_organizations_table.sql
migrations/postgres/: 001_initial_schema.sql  002_game_specific_tables.sql  003_indexes_and_constraints.sql  004_matches_tables.sql
src/: lib.rs  main.rs
src/config/: aws.rs  database.rs  mod.rs  permissions.rs  settings.rs
src/handlers/: auth.rs  chat.rs  communities.rs  dashboard.rs  mod.rs  players.rs  uploads.rs
src/middleware/: auth.rs  mod.rs  permissions.rs
src/migration/: cli.rs  m20240101_000001_initial.rs  m20240102_000002_game_stats.rs  m20240103_000003_financial.rs  m20240104_000004_matches.rs  m20240105_000005_organizations.rs  mod.rs
src/models/: mod.rs
src/models/dynamodb/: chat.rs  community.rs  entity.rs
src/models/mongodb/: chart.rs
src/models/postgres/: activity_log.rs  admin.rs  battle.rs  chat.rs  chat_message.rs  community.rs  community_member.rs  community_post.rs  match.rs  match_participant.rs  mod.rs  organization.rs  player.rs  player_connection.rs  player_game_stats.rs  post_comment.rs  recruitment_approach.rs  team.rs  team_player_invitation.rs  tournament.rs  tournament_team.rs  tournament_team_invite.rs  (+1 more)
src/repositories/: community_repository.rs  dynamodb_repository.rs
src/routes/: api.rs  mod.rs
src/scripts/: mod.rs  setup_dynamodb.rs  setup_s3.rs
src/services/: admin_service.rs  auth_service.rs  chat_service.rs  community_service.rs  dashboard_service.rs  minio_monitor.rs  mod.rs  organization_service.rs  player_game_stats_service.rs  player_service.rs  rate_limit_service.rs  s3_service.rs  session_service.rs  tournament_service.rs  tournament_team_invite_service.rs
src/utils/: errors.rs  validation.rs
